# aims

./: .gitignore  .prettierignore  AGENTS.md  OPERATIONS.md  README.md  go.mod  pyproject.toml
.agent/skills/update-cfd-instruments/: SKILL.md
.agents/skills/aims-okf-author/: SKILL.md
.agents/skills/aims-okf-curator/: SKILL.md
.agents/skills/market-wiki/: SKILL.md
.github/: renovate.json
.github/workflows/: ci.yml  codex-cli-to-slack.yml  daily-market-analysis.yml  gemini-cli-to-slack.yml  update-calendars.yml  update-cfd-instruments.yml
archetypes/: results.md
config/_default/: hugo.toml  languages.en.toml  menus.en.toml  params.toml
content/: _index.md
content/evaluation/: _index.md
content/knowledge/: _index.md
content/performance/: _index.md
content/results/: 2026-06-29-market-analysis.md  2026-06-30-market-analysis.md  2026-07-01-market-analysis.md  2026-07-02-market-analysis.md  2026-07-03-market-analysis.md  2026-07-04-market-analysis.md  2026-07-05-market-analysis.md  2026-07-06-market-analysis.md  2026-07-07-market-analysis.md  2026-07-08-market-analysis.md  2026-07-09-market-analysis.md  2026-07-10-market-analysis.md  2026-07-11-market-analysis.md  2026-07-12-market-analysis.md  2026-07-13-market-analysis.md  2026-07-14-market-analysis.md  2026-07-15-market-analysis.md  2026-07-16-market-analysis.md  2026-07-17-market-analysis.md  2026-07-18-market-analysis.md  2026-07-19-market-analysis.md  2026-07-20-market-analysis.md  2026-07-21-market-analysis.md  2026-07-22-market-analysis.md  2026-07-23-market-analysis.md  2026-07-24-market-analysis.md  _index.md
data/: cfd_instruments.csv  stooq_symbols.txt  yfinance_symbols.txt
data/analysis/: 2026-06-29.json  2026-06-30.json  2026-07-01.json  2026-07-02.json  2026-07-03.json  2026-07-04.json  2026-07-05.json  2026-07-06.json  2026-07-07.json  2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-11.json  2026-07-12.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
data/backtests/: 2016-09-30_2026-07-06_d.json
data/calendars/: earnings.json  macro_events.json
data/evidence/: 2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
data/history/: 2026-06-29.json  2026-06-30.json  2026-07-01.json  2026-07-02.json  2026-07-03.json  2026-07-04.json  2026-07-05.json  2026-07-06.json  2026-07-07.json  2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-11.json  2026-07-12.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
data/mappings/: canonical_instrument_mappings.csv  cfd_ticker_mappings.csv  evidence_sources.csv
data/performance/: 2026-07-04.json  2026-07-06.json  2026-07-07.json  2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-11.json  2026-07-12.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json  prompt_regressions.json  signals.json
data/schema/: analysis.schema.json  backtest.schema.json  calendar.schema.json  cfd_instruments.schema.json  evidence.schema.json  history.schema.json  performance.schema.json  prompt_regression.schema.json  qualitative.schema.json  signal_performance.schema.json
knowledge/: index.md  log.md
knowledge/wiki/: overview.md
okf/: index.md
okf/concepts/: agent-skills.md  architecture.md  data-sources.md  instrument-master.md  operational-recovery.md  publication-workflow.md  qualitative-analysis.md  report-generation.md  scoring-methodology.md
okf/logs/: log.md
src/aims/: __init__.py  backtest.py  calendars.py  evidence.py  history.py  link_check.py  mappings.py  market_analysis.py  notifications.py  okf_curation.py  okf_hugo.py  performance.py  policy.py  prompt_regression.py  qualitative.py  qualitative_eval.py  qualitative_gates.py  reports.py  signal_performance.py  update_cfd_instruments.py  validate_analysis.py  validate_backtest.py  validate_calendar.py  validate_cfd_instruments.py  validate_evidence.py  validate_history.py  validate_performance.py  validate_prompt_regression.py  validate_qualitative.py  validate_signal_performance.py
tests/: test_backtest.py  test_calendars.py  test_data_quality_policy.py  test_entrypoints.py  test_evidence.py  test_generate_history.py  test_generate_report.py  test_link_check.py  test_market_analysis.py  test_market_wiki.py  test_notify_slack.py  test_notify_slack_qualitative.py  test_okf_curation.py  test_okf_hugo_adapter.py  test_performance.py  test_prompt_regression.py  test_qualitative.py  test_qualitative_eval.py  test_qualitative_gates.py  test_qualitative_prompt_regression.py  test_reports_qualitative.py  test_signal_performance.py  test_update_cfd_instruments.py  test_validate_analysis.py  test_validate_backtest.py  test_validate_calendar.py  test_validate_cfd_instruments.py  test_validate_evidence.py  test_validate_history.py  test_validate_instrument_mappings.py  test_validate_performance.py  test_validate_prompt_regression.py  test_validate_qualitative.py  test_validate_signal_performance.py
tests/fixtures/: analysis_2024-01-01.json  analysis_2024-01-01_mapped.json  calendar_2024.json  evidence_2024-01-01.json  qualitative_2024-01-01.json  qualitative_2024-01-01_gated.json  qualitative_2024-01-01_withheld.json
tests/golden/: 2024-01-01-market-analysis-enriched.md  2024-01-01-market-analysis-partially-gated.md  2024-01-01-market-analysis-with-events.md  2024-01-01-market-analysis-with-qualitative.md  2024-01-01-market-analysis.md  2024-01-01-wiki-source.md  okf-curation-proposal-empty.md  okf-curation-proposal.md  stance-evaluation.md
tools/: okf_hugo_adapter.py
(+62 files in other folders)
