[project]
name = "aims"
version = "0.1.0"
description = "Financial market analysis data maintenance scripts"
authors = [{name = "dceoy", email = "dceoy@users.noreply.github.com"}]
maintainers = [{name = "dceoy", email = "dceoy@users.noreply.github.com"}]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">= 3.11, < 3.14"
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Financial and Insurance Industry",
  "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Repository = "https://github.com/dceoy/aims.git"

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = [
  "--cov=.agents/skills/update-cfd-instruments/scripts",
  "--cov-branch",
  "--cov-report=term-missing",
  "--cov-fail-under=100",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
  "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
  "ruff >= 0.11.0",
  "pyright >= 1.1.407",
  "pytest>=9.0.3",
  "pytest-mock>=3.15.1",
  "pytest-cov>=7.1.0",
  "pytest-stub>=1.1.0",
  "vulture>=2.16",
  "ipython>=9.14.0",
]

[tool.ruff]
line-length = 88
exclude = ["build", ".venv"]
preview = true

[tool.ruff.lint]
select = [
  "F",      # Pyflakes (F)
  "E",      # pycodestyle error (E)
  "W",      # pycodestyle warning (W)
  "C90",    # mccabe (C90)
  "I",      # isort (I)
  "N",      # pep8-naming (N)
  "D",      # pydocstyle (D)
  "UP",     # pyupgrade (UP)
  "S",      # flake8-bandit (S)
  "B",      # flake8-bugbear (B)
  "C4",     # flake8-comprehensions (C4)
  "SIM",    # flake8-simplify (SIM)
  "ARG",    # flake8-unused-arguments (ARG)
  "PD",     # pandas-vet (PD)
  "PLC",    # Pylint convention (PLC)
  "PLE",    # Pylint error (PLE)
  "PLR",    # Pylint refactor (PLR)
  "PLW",    # Pylint warning (PLW)
  "FLY",    # flynt (FLY)
  "NPY",    # NumPy-specific rules (NPY)
  "PERF",   # Perflint (PERF)
  "FURB",   # refurb (FURB)
  "RUF",    # Ruff-specific rules (RUF)
  "YTT",    # flake8-2020 (YTT)
  "ANN",    # flake8-annotations (ANN)
  "ASYNC",  # flake8-async (ASYNC)
  "BLE",    # flake8-blind-except (BLE)
  "FBT",    # flake8-boolean-trap (FBT)
  "A",      # flake8-builtins (A)
  "COM",    # flake8-commas (COM)
  "DTZ",    # flake8-datetimez (DTZ)
  "T10",    # flake8-debugger (T10)
  "DJ",     # flake8-django (DJ)
  "EM",     # flake8-errmsg (EM)
  "EXE",    # flake8-executable (EXE)
  "FA",     # flake8-future-annotations (FA)
  "ISC",    # flake8-implicit-str-concat (ISC)
  "ICN",    # flake8-import-conventions (ICN)
  "LOG",    # flake8-logging (LOG)
  "G",      # flake8-logging-format (G)
  "INP",    # flake8-no-pep420 (INP)
  "PIE",    # flake8-pie (PIE)
  "T20",    # flake8-print (T20)
  "PYI",    # flake8-pyi (PYI)
  "PT",     # flake8-pytest-style (PT)
  "Q",      # flake8-quotes (Q)
  "RSE",    # flake8-raise (RSE)
  "SLF",    # flake8-self (SLF)
  "SLOT",   # flake8-slots (SLOT)
  "TID",    # flake8-tidy-imports (TID)
  "TCH",    # flake8-type-checking (TCH)
  "INT",    # flake8-gettext (INT)
  "PTH",    # flake8-use-pathlib (PTH)
  "TD",     # flake8-todos (TD)
  "FIX",    # flake8-fixme (FIX)
  "ERA",    # eradicate (ERA)
  "PGH",    # pygrep-hooks (PGH)
  "TRY",    # tryceratops (TRY)
  "AIR",    # Airflow (AIR)
  "DOC",    # pydoclint (DOC)
]
ignore = [
  "ANN401",   # Dynamically typed expressions are acceptable in HTML parser events
  "COM812",   # missing-trailing-comma
  "FBT001",   # boolean-type-hint-positional-argument
  "FBT002",   # boolean-default-value-positional-argument
]

[tool.ruff.lint.per-file-ignores]
".agents/skills/update-cfd-instruments/scripts/*.py" = [
  "C901",     # Agent scraper scripts can have parser/state-machine complexity
  "D100",     # Missing module docstring
  "D101",     # Missing class docstring
  "D102",     # Missing method docstring
  "D103",     # Missing function docstring
  "DOC201",   # Missing return documentation
  "DOC501",   # Raised exception missing from docstring
  "PLR0912",  # Too many branches
  "PLR0915",  # Too many statements
  "RUF001",   # Fullwidth Japanese source strings must match broker pages
  "S310",     # URL fetches are intentional for official public lineup pages
  "T201",     # CLI status output is intentional
]
"tests/*.py" = [
  "D100",   # Test modules are named by behavior rather than docstrings
  "D103",   # Test function names describe the assertion
  "PLC1901", # Explicit empty string comparisons are clearer in assertions
  "RUF001", # Japanese fixture text must match source pages
  "S101",   # Pytest uses assert introspection
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 10
max-public-methods = 40

[tool.pyright]
include = [".agents/skills/update-cfd-instruments/scripts"]
exclude = ["build", ".venv"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportMissingTypeStubs = "none"
