[project]
name = "aims"
version = "0.1.0"
description = "Financial market analysis data maintenance scripts"
authors = [{name = "dceoy", email = "dceoy@users.noreply.github.com"}]
maintainers = [{name = "dceoy", email = "dceoy@users.noreply.github.com"}]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">= 3.13, < 3.14"
dependencies = [
    "pyyaml>=6.0.0",
    "yfinance>=0.2.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Financial and Insurance Industry",
  "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Repository = "https://github.com/dceoy/aims.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aims"]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = [
  "--cov=src/aims",
  "--cov-branch",
  "--cov-report=term-missing",
  "--cov-fail-under=100",
]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
  "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
  "ruff >= 0.11.0",
  "pyright >= 1.1.407",
  "pytest>=9.0.3",
  "pytest-mock>=3.15.1",
  "pytest-cov>=7.1.0",
  "pytest-stub>=1.1.0",
  "vulture>=2.16",
  "ipython>=9.14.0",
]

[tool.ruff]
line-length = 88
exclude = ["build", ".venv"]
preview = true

[tool.ruff.lint]
select = [
  "F",      # Pyflakes (F)
  "E",      # pycodestyle error (E)
  "W",      # pycodestyle warning (W)
  "C90",    # mccabe (C90)
  "I",      # isort (I)
  "N",      # pep8-naming (N)
  "D",      # pydocstyle (D)
  "UP",     # pyupgrade (UP)
  "S",      # flake8-bandit (S)
  "B",      # flake8-bugbear (B)
  "C4",     # flake8-comprehensions (C4)
  "SIM",    # flake8-simplify (SIM)
  "ARG",    # flake8-unused-arguments (ARG)
  "PD",     # pandas-vet (PD)
  "PLC",    # Pylint convention (PLC)
  "PLE",    # Pylint error (PLE)
  "PLR",    # Pylint refactor (PLR)
  "PLW",    # Pylint warning (PLW)
  "FLY",    # flynt (FLY)
  "NPY",    # NumPy-specific rules (NPY)
  "PERF",   # Perflint (PERF)
  "FURB",   # refurb (FURB)
  "RUF",    # Ruff-specific rules (RUF)
  "YTT",    # flake8-2020 (YTT)
  "ANN",    # flake8-annotations (ANN)
  "ASYNC",  # flake8-async (ASYNC)
  "BLE",    # flake8-blind-except (BLE)
  "FBT",    # flake8-boolean-trap (FBT)
  "A",      # flake8-builtins (A)
  "COM",    # flake8-commas (COM)
  "DTZ",    # flake8-datetimez (DTZ)
  "T10",    # flake8-debugger (T10)
  "DJ",     # flake8-django (DJ)
  "EM",     # flake8-errmsg (EM)
  "EXE",    # flake8-executable (EXE)
  "FA",     # flake8-future-annotations (FA)
  "ISC",    # flake8-implicit-str-concat (ISC)
  "ICN",    # flake8-import-conventions (ICN)
  "LOG",    # flake8-logging (LOG)
  "G",      # flake8-logging-format (G)
  "INP",    # flake8-no-pep420 (INP)
  "PIE",    # flake8-pie (PIE)
  "T20",    # flake8-print (T20)
  "PYI",    # flake8-pyi (PYI)
  "PT",     # flake8-pytest-style (PT)
  "Q",      # flake8-quotes (Q)
  "RSE",    # flake8-raise (RSE)
  "SLF",    # flake8-self (SLF)
  "SLOT",   # flake8-slots (SLOT)
  "TID",    # flake8-tidy-imports (TID)
  "TCH",    # flake8-type-checking (TCH)
  "INT",    # flake8-gettext (INT)
  "PTH",    # flake8-use-pathlib (PTH)
  "TD",     # flake8-todos (TD)
  "FIX",    # flake8-fixme (FIX)
  "ERA",    # eradicate (ERA)
  "PGH",    # pygrep-hooks (PGH)
  "TRY",    # tryceratops (TRY)
  "AIR",    # Airflow (AIR)
  "DOC",    # pydoclint (DOC)
]
ignore = [
  "ANN401",   # Dynamically typed expressions are acceptable in HTML parser events
  "COM812",   # missing-trailing-comma
  "FBT001",   # boolean-type-hint-positional-argument
  "FBT002",   # boolean-default-value-positional-argument
]

[tool.ruff.lint.per-file-ignores]
"tools/*.py" = [
  "D100",
  "D101",
  "D103",
  "DOC201",
  "DOC501",
  "PERF401",
  "S506",
  "T201",
]
"tools/__init__.py" = ["D104"]
"src/aims/*.py" = [
  "C901",     # Scoring/feature functions have inherent complexity
  "D100",     # Module docstrings are in the module-level string
  "D101",     # Class docstrings suppressed for brevity
  "D102",     # Method docstrings suppressed for brevity
  "D103",     # Function docstrings suppressed for brevity
  "D107",     # __init__ docstrings suppressed for brevity
  "DOC201",   # Return docs omitted in favour of type annotations
  "DOC501",   # Raised exceptions documented inline
  "INP001",   # Package __init__.py is covered by D104; scripts use this too
  "PLR0911",  # Fail-fast functions have many early-return exit points
  "PLR0912",  # Feature/scoring functions can have many branches
  "PLR0914",  # Local variable count is dominated by feature columns
  "PLR0915",  # Main analysis scripts can have many statements
  "PLR2004",  # Magic values are intrinsic to financial formulae
  "RUF001",   # Fullwidth Japanese source strings must match broker pages
  "S310",     # urllib fetch is intentional for Stooq data download
  "S404",     # subprocess import is intentional for git commit lookup
  "S603",     # subprocess.run with list arg is safe
  "S607",     # git partial path is intentional
  "T201",     # CLI status output via print is intentional
]
".agents/skills/market-analysis/scripts/*.py" = [
  "C901",     # Scoring/feature functions have inherent complexity
  "D100",     # Module docstrings are in the module-level string
  "D101",     # Class docstrings suppressed for brevity
  "D102",     # Method docstrings suppressed for brevity
  "D103",     # Function docstrings suppressed for brevity
  "D107",     # __init__ docstrings suppressed for brevity
  "DOC201",   # Return docs omitted in favour of type annotations
  "DOC501",   # Raised exceptions documented inline
  "INP001",   # Not a package; scripts are standalone entrypoints
  "PLR0911",  # Fail-fast functions have many early-return exit points
  "PLR0912",  # Feature/scoring functions can have many branches
  "PLR0914",  # Local variable count is dominated by feature columns
  "PLR0915",  # Main analysis scripts can have many statements
  "PLR2004",  # Magic values are intrinsic to financial formulae
  "S310",     # urllib fetch is intentional for Stooq data download
  "S404",     # subprocess import is intentional for git commit lookup
  "S603",     # subprocess.run with list arg is safe
  "S607",     # git partial path is intentional
  "T201",     # CLI status output via print is intentional
]
".agents/skills/qualitative-analysis/scripts/*.py" = [
  "D100",     # Module docstrings are in the module-level string
  "INP001",   # Not a package; scripts are thin CLI entrypoints
]
".agents/skills/update-cfd-instruments/scripts/*.py" = [
  "C901",     # Agent scraper scripts can have parser/state-machine complexity
  "D100",     # Missing module docstring
  "D101",     # Missing class docstring
  "D102",     # Missing method docstring
  "D103",     # Missing function docstring
  "DOC201",   # Missing return documentation
  "DOC501",   # Raised exception missing from docstring
  "INP001",   # Not a package; scripts are thin CLI entrypoints
  "PLR0912",  # Too many branches
  "PLR0915",  # Too many statements
  "RUF001",   # Fullwidth Japanese source strings must match broker pages
  "S310",     # URL fetches are intentional for official public lineup pages
  "T201",     # CLI status output is intentional
]
"tests/*.py" = [
  "D100",    # Test modules are named by behavior rather than docstrings
  "D103",    # Test function names describe the assertion
  "PLC1901", # Explicit empty string comparisons are clearer in assertions
  "PLR2004", # Magic values are natural and readable in test assertions
  "RUF001",  # Japanese fixture text must match source pages
  "RUF069",  # Exact float literals in test assertions are intentional
  "S101",    # Pytest uses assert introspection
  "S404",    # subprocess import is intentional for entrypoint smoke tests
  "S603",    # subprocess.run with list arg is safe
  "SLF001",  # Tests intentionally access private implementation members
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 10
max-public-methods = 40

[tool.pyright]
include = [
  "src/aims",
  "tools",
  ".agents/skills/market-analysis/scripts",
  ".agents/skills/qualitative-analysis/scripts",
  ".agents/skills/update-cfd-instruments/scripts",
]
exclude = ["build", ".venv", ".claude", "tests"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportMissingTypeStubs = "none"
